--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
     <header>
@@ -20,9 +21,25 @@
             </ul>
 
             <div class="top-btn">
-                <a href="#"class="nav-btn">Join Us</a>
+                <a href="#"class="nav-btn">LOGIN</a>
             </div>
         
     </header>
+    <section class="home">
+        <div class="content">
+            <h1>BE FIT BE STRONGER</h1>
+            <p>Unleash your potential at our cutting-edge fitness Center.Elevate your fitness journey.</p>
+            <div class="top-btn">
+                <a href="#"class="home-btn">EXPLORE MORE</a>&nbsp;&nbsp;
+                <a href="#"class="home-btn">BE A MEMBER</a>
+            </div>
+           
+            <div class="media-icons">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
