--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="#" class="logo">Fitzone <span>Fitness </span>Center</a>
 
         <ul class="navbar">
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#classes">SERVICES</a></li>
+            <li><a href="#HOME">HOME</a></li>
+            <li><a href="#SERVICES">SERVICES</a></li>
             <li><a href="#aboutus">ABOUT US</a></li>
             <li><a href="#pricing">PRICING</a></li>
             <li><a href="#training">TRAINERS</a></li>
@@ -27,7 +27,7 @@
         </div>
 
     </header>
-    <section class="home">
+    <section class="home"id="HOME">
         <video class="slide active" src="Media/a_Cinematic_Fitness_Video...SONY_FX6(1080p).mp4" autoplay muted
             loop></video>
         <video class="slide"
@@ -100,8 +100,7 @@
 
     <br><br><br><br><br>
     <div class="home-content">
-        <img src="Media/pexels-photo-416809.webp"
-            class="Home-img">
+        <img src="Media/pexels-photo-416809.webp" class="Home-img">
         <div style="text-align: center;padding: 60px;">
             <h2 style="font-size: 40px;">FITNESS ALL ABOUT</h2>
             <h1 style="font-style: italic;">Make yourself stronger than your best excuses</h1>
@@ -117,18 +116,55 @@
                 <div class="section">
                     <i class="fa-solid fa-check"></i>
                     <h3>FULLY INSURED</h3>
-                    <p>Rest assured,we are fully insured,providing you with peace of mind and protection for any unforseen circumstances.</p>
+                    <p>Rest assured,we are fully insured,providing you with peace of mind and protection for any
+                        unforseen circumstances.</p>
                 </div>
             </div>
             <div class="home-card">
                 <div class="section">
                     <i class="fa-solid fa-person-chalkboard"></i>
                     <h3>PERSONAL TRAINER</h3>
-                    <p>Our experienced personal trainers are dedicated to helping you achieve fitness goals through personalized guidance and support.</p>
+                    <p>Our experienced personal trainers are dedicated to helping you achieve fitness goals through
+                        personalized guidance and support.</p>
                 </div>
             </div>
         </div>
-    </div>
+    </div><br><br><br><br>
+    <section class="services" id="SERVICES">
+        <h2 class="heading">Our <span>Services</span> </h2>
+        <div class="services-content">
+            <div class="row">
+                <img src="Media/fitness programs.webp" alt="Fitness programs">
+                <h4>Wide Range of fitness programs</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/equipments.jpeg" alt="fitness equipments">
+                <h4>State of the Art equipment</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/training sessions.webp" alt="training sessions">
+                <h4>Personalized training Sessions</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/group classes.jpeg" alt="group classes">
+                <h4>Group Classes</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/nutrition.webp" alt="nutrition counselling">
+                <h4>Nutrition Counseling</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/general training.webp" alt="general training">
+                <h4>General Training</h4>
+                <center><a href="#" class="list-btn">SEE MORE</a></center>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 
