--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FITZONE FITNESS CENTER</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
@@ -165,6 +165,105 @@
             </div>
         </div>
     </section>
+    <div class="schedule-container">
+        <h1 class="heading">Our <span>Schedule</span> </h1>
+        <h2 style="color:#2980b9;font-weight: 900;font-size: 20px;">Check Our Classes Schedule</h2>
+        <table>
+          <thead>
+            <tr>
+              <th><i class="fa-solid fa-dumbbell"></i></th>
+              <th>MONDAY</th>
+              <th>TUESDAY</th>
+              <th>WEDNESDAY</th>
+              <th>THURSDAY</th>
+              <th>FRIDAY</th>
+              <th>SATURDAY</th>
+              <th>View All</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="font-weight: bolder;">MAT PILATES</td>
+              <td></td>
+              <td>Jenny Wilson<br>9:00 AM - 11:00 AM</td>
+              <td></td>
+              <td>Jenny Wilson<br>9:00 AM - 11:00 AM</td>
+              <td></td>
+              <td>Jenny Wilson<br>9:00 AM - 11:00 AM</td>
+              <td><button>Join Now</button></td>
+            </tr>
+            <tr>
+                <td style="font-weight: bolder;">CARDIO BURN</td>
+                <td>Albert Flores<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Albert Flores<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Albert Flores<br>9.00 AM - 11.00 AM</td>
+                <td>Albert Flores<br>9.00 AM - 11.00 AM</td>
+                <td><button>Join Now</button></td>
+            </tr>
+            <tr>
+                <td style="font-weight: bolder;">CROSS FIT</td>
+                <td></td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td><button>Join Now</button></td>
+            </tr>
+            <tr>
+                <td style="font-weight: bolder;">YOGA</td>
+                <td>Annette Black<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Annette Black<br>9.00 AM - 11.00 AM</td>
+                <td>Annette Black<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Annette Black<br>9.00 AM - 11.00 AM</td>
+                <td><button>Join Now</button></td>
+
+            </tr>
+            <tr>
+                <td style="font-weight: bolder;">BODY BUID</td>
+                <td></td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td>Floyd Miles<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td><button>Join Now</button></td>
+
+            </tr>
+            <tr>
+                <td style="font-weight: bolder;">CARDIO</td>
+                <td>Jacob Jones<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Jacob Jones<br>9.00 AM - 11.00 AM</td>
+                <td></td>
+                <td>Jacob Jones<br>9.00 AM - 11.00 AM</td>
+                <td>Jacob Jones<br>9.00 AM - 11.00 AM</td>
+                <td><button>Join Now</button></td>
+            </tr>
+            </tbody>
+        </table>
+      </div>
+
+      <div class="banner">
+        <div class="content">
+          <h2>MEET THE TRAINERS</h2>
+          <h1>BOOK CLASS</h1>
+          <p>Know About Special Offer And New Training</p><br>
+          <button class="banner-btn">JOIN NOW</button>
+        </div>
+        <div class="content">
+          <h2>COME TRAIN WITH US</h2>
+          <h1>30% OFF</h1>
+          <p>This Offer Is For A Limited Time Only</p><br>
+          <button class="banner-btn">JOIN NOW</button>
+        </div>
+      </div>
+    
+    
     <script src="script.js"></script>
 </body>
 
