--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img src="Media/about.webp" class="about-img">
     
         <div class="about-content">
-            <h2 class="head">Why Choose Us?</h2>
+            <h2 class="head">Why <span>Choose </span>Us?</h2>
 
             <p>● Our goal is to attract new members,provide information about services,promote class schedules,and
                 facilitate membership sign-ups and inquires.</p>
