--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#ABOUTUS">ABOUT US</a></li>
             <li><a href="#PRICING">PRICING</a></li>
             <li><a href="#TRAINERS">TRAINERS</a></li>
-            <li><a href="#blog">BLOG</a></li>
+            <li><a href="#BLOG">BLOG</a></li>
         </ul>
 
         <div class="top-btn">
@@ -483,6 +483,40 @@
         </div>
     </section>
 
+<section class="blog-posts"id="BLOG">
+        <h2 class="heading">Our <span>Blog</span> </h2>
+        <div class="card-container">
+            <div class="card">
+                <div class="section">
+                    <img src="Media/workout.webp">
+                    <p>2024.10.11</p>
+                    <h3>Workout Routings</h3>
+                    <p>Creating effective and engaging gym workout routines is a valuable skill for fitness enthusiasts and aspiring fitness bloggers. By sharing well-crafted routines, you can inspire your audience, provide practical guidance, and establish yourself as a trusted authority in the fitness community.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="section">
+                    <i class="fa-solid fa-person-chalkboard"></i>
+                    <h3>Qualified Instructors</h3>
+                    <p>Train with confidence under the guidance of our highly skilled instructors.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="section">
+                    <i class="fa-solid fa-dna"></i>
+                    <h3>Organic Proteins</h3>
+                    <p>Elevate your goins with our premium selection of organic protein supplements.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="section">
+                    <i class="fa-solid fa-award"></i>
+                    <h3>Award Programs</h3>
+                    <p>Unlock rewards and recogntion through our exclusive award programs for memebers.</p>
+                </div>
+            </div>
+        </div>
+</section>
     <script src="script.js"></script>
 </body>
 
