--- a/index.html
+++ b/index.html
@@ -570,7 +570,20 @@
                 </div>
             </div>
         </div>
-</section>
+</section><br><br>
+<h2 class="heading">Fitness <span>Gallery</span> </h2>
+<div class="gallery">
+    <img src="Media/image1.webp">
+    <img src="Media/image2.jpeg">
+    <img src="Media/image3.webp">
+    <img src="Media/image4.webp">
+    <img src="Media/image5.webp">
+    <img src="Media/image6.jpeg">
+    <img src="Media/fitness equipments.webp">
+    <img src="Media/image7.jpeg">
+    <img src="Media/image 8.webp">
+</div><br><br><br>
+<h2 class="heading" style="font-size: 40px;">CLIENTS SAY <span>ABOUT US?</span> </h2>
     <script src="script.js"></script>
 </body>
 
