--- a/classes.html
+++ b/classes.html
@@ -4,8 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="class.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body>
     
+    <section class="services" id="SERVICES"><center>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: 17px;">&nbsp;
+            <button class="btn btn-outline-primary" type="submit" style="font-size: 20px;font-weight: 500;width: 140px;height: 40px;">Search</button>
+          </form></center><br>
+        <h2 class="heading">Our <span>Classes</span> </h2>
+        <div class="services-content">
+            <div class="row">
+                <img src="Media/cardio class.webp" alt="Fitness programs">
+                <h4>Cardio Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.3000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/body building class.webp" alt="Fitness programs">
+                <h4>Body Building Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.3000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/gym workout.webp" alt="Fitness programs">
+                <h4>Gym Workout Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.2000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/cross fit.webp" alt="Fitness programs">
+                <h4>Cross Fit Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.2000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/zumba.webp" alt="Fitness programs">
+                <h4>Zumba Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.2000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/yoga class.jpeg" alt="Fitness programs">
+                <h4>Yoga Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.3000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/weight training.jpeg" alt="Fitness programs">
+                <h4>Weight training Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.2500/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/dancing class.webp" alt="Fitness programs">
+                <h4>Dancing Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.2000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/pilate.webp" alt="Fitness programs">
+                <h4>Pilates Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.3000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/personal.webp" alt="Fitness programs">
+                <h4>Personal Training Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.3000/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/diet.jpeg" alt="Fitness programs">
+                <h4>Diet Sessions &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.1500/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+            <div class="row">
+                <img src="Media/exercise.webp" alt="Fitness programs">
+                <h4>Exercise Class &nbsp;&nbsp;<i class="fa-solid fa-dumbbell"style=" color:#74b9ff"></i></h4>
+                <p style="font-size: 18px;color:#2980b9;font-weight: 800;text-align: center;">Rs.1500/=</p>
+                <center><a href="payment.html" class="list-btn">Buy Now</a></center>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
