--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Unleash your potential at our cutting-edge fitness Center.Elevate your fitness journey.</p>
             <div class="top-btn">
                 <a href="#EXPLORE" class="home-btn">EXPLORE MORE</a>&nbsp;&nbsp;
-                <a href="login.html" class="home-btn">BE A MEMBER</a>
+                <a href="createAccount.html" class="home-btn">BE A MEMBER</a>
             </div>
         </div>
 
@@ -351,7 +351,7 @@
                 <h2>Ladies-Annual Rs.55000</h2>
                 <h2>Couple-Annual Rs.85000</h2><br><br>
 
-                <center><a href="membership.html" class="member-btn">JOIN NOW</a></center>
+                <center><a href="" class="member-btn">JOIN NOW</a></center>
             </div>
             <div class="rows">
                 <h3>Gold Membership</h3>
@@ -361,7 +361,7 @@
                 <h2>Ladies-Annual Rs.48000</h2>
                 <br><br><br>
 
-                <center><a href="membership.html" class="member-btn">JOIN NOW</a></center>
+                <center><a href="" class="member-btn">JOIN NOW</a></center>
             </div>
             <div class="rows">
                 <h3>Silver Membership</h3>
@@ -371,7 +371,7 @@
                 <h2>Individual-3 months Rs.35000</h2>
                 <h2>Individual-1 month Rs.15000</h2><br><br>
 
-                <center><a href="membership.html" class="member-btn">JOIN NOW</a></center>
+                <center><a href="" class="member-btn">JOIN NOW</a></center>
             </div>
         </div>
     </section>
